--- a/src/components/Sidebar/MainNav/MainNav.scss
+++ b/src/components/Sidebar/MainNav/MainNav.scss
@@ -6,7 +6,6 @@
 
 .main-nav {
   min-width: 200px;
-  width: 100%;
   max-width: 240px !important;
   min-height: 100%;
   max-height: 100vh;
@@ -24,10 +23,10 @@
     a {
       max-width: 100%;
       font-size: 0.875rem;
-      font-weight: 100;
       color: #fff;
       padding: 8px;
       display: block;
+      text-transform: uppercase;
     }
   }
 }
